--- a/ex4/exercicio4.html
+++ b/ex4/exercicio4.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CP1-WEB/DEV</title>
 </head>
 <body>
-    <h1>Qual sua faixa etária?</h1>
+    <h1>Início do programa.</h1>
     <script type="text/javascript" src="exercicio4.js"></script>
 </body>
 </html>
