mudanças_de_nomes

--- a/ex3/index.html
+++ b/ex3/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Início do programa.</h1>
     
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="exercicio3.js"></script>
 
 </body>
 </html>
