--- a/ex5/index.html
+++ b/ex5/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Início do programa</h1>
-    <script type="text/javascript" src="ex5/exercicio5.js"></script>
+    <script type="text/javascript" src="exercicio5.js"></script>
 </body>
 </html>
