--- a/ex9/index.html
+++ b/ex9/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <script src="./js/script.js"defer></script>
-    <div id="Div1">Passe o mouse aqui para ver a mágica acontecer!</div>
+    <div id="Div1">Passe o mouse aqui</div>
 </body>
 </html>
