--- a/ex9/index.html
+++ b/ex9/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CP1-WEB/DEV</title>
+  <title>Exemplo de troca de conteúdo e cor de fundo</title>
 </head>
 <body>
-    
+  <div class="box">Olá</div>
+  <script src="js/script.js"></script>
 </body>
 </html>
