adicao do ex9 no docs

--- a/ex9/index.html
+++ b/ex9/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-  <title>Exemplo de troca de conteúdo e cor de fundo</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CP1-WEB/DEV</title>
 </head>
 <body>
-  <div class="box">Olá</div>
-  <script src="js/script.js"></script>
+    <h1>Início do programa</h1>
+    <div class="box">Olá</div>
+    <script src="js/script.js"></script>
+    
 </body>
 </html>
