--- a/ex7/index.html
+++ b/ex7/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CP1-WEB/DEV</title>
 </head>
 <body>
-    
+    <h1>Início do Programa</h1>
+    <button onclick="mudarCor()">Clique aqui para mudar a cor de fundo </button>
+    <script src="js/sript.js"></script>
 </body>
 </html>
